Fix text overflow

--- a/styles/base/variables.less
+++ b/styles/base/variables.less
@@ -19,7 +19,7 @@
 @header-height: 4rem;
 @footer-height: 3rem;
 
-@sidenav-width: 16rem;
+@sidenav-width: 18rem;
 
 // Colors
 @grey-white: #fff;
